<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.AppCompat.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:elevation="@dimen/d_10"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/d_20"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/d_20"
        android:background="@drawable/bg_btn_state_fb"
        android:text="@string/btn_log_in"
        android:textColor="@color/colorDefaultButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/d_20"
        android:layout_marginRight="@dimen/d_20"
        android:background="@drawable/bg_edt_shape"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_email_phone"
            android:layout_width="@dimen/d_350"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/d_20"
            android:background="@android:color/transparent"
            android:hint="@string/tf_email_phone"
            android:inputType="textCapWords|textEmailAddress|phone"
            android:textColor="@color/colorTextFieldForeground" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="@dimen/d_350"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/d_20"
            android:background="@android:color/transparent"
            android:hint="@string/tf_password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextFieldForeground" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#D5D5D5" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_facebook"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/roboto"
        android:text="@string/lbl_main"
        android:textAlignment="center"
        android:textColor="@color/colorDefaultButton"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="150dp"
        android:clickable="true"
        android:text="@string/sign_up"
        android:textColor="@color/color_state_fb" />

    <TextView
        android:id="@+id/textViewNeedHelp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:text="@string/need_help"
        android:textColor="@color/color_state_fb" />
</LinearLayout>